<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="200"
        android:title="@string/menu_info"
        android:icon="@drawable/ic_more_vert_white_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/biggest"
                android:title="@string/order_by_biggest" />
            <item
                android:id="@+id/losers"
                android:title="@string/order_by_losers" />
            <item
                android:id="@+id/biggestProgress"
                android:title="@string/order_by_biggest_progress" />
            <item
                android:id="@+id/biggestLosers"
                android:title="@string/order_by_biggest_lose" />
        </menu>
    </item>
</menu>
