<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="280dp">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/coverImg"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:id="@+id/countryProgress"
            android:layout_gravity="center"
            android:max="199"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_margin="8dp"
            android:showDividers="middle"
            android:divider="@drawable/empty_tall_divider"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/total"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textTotal"
                    android:textColor="@color/total_score"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/visa_free"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textVisaFree"
                    android:textColor="@color/visa_free"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/on_arrival"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textVisaOnArrival"
                    android:textColor="@color/visa_on_arrival"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/eTA"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textEVisa"
                    android:textColor="@color/eTa"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/visa_required"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textVisaRequired"
                    android:textColor="@color/visa_required"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="2dp"
                    android:text="@string/lastUpdate"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lastUpdate"
                    android:layout_margin="2dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



        </ScrollView>










